- z-index bug for slider navigation - header logo padding left bug

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -168,12 +168,11 @@ b, strong {
 	.container-wide {
 		padding-right: 0;
 		margin: 0 auto;
-		@media (min-width:1680px) {
+		@media (min-width:1700px) {
 			padding-left: 0;
 		}
 		@media (max-width:1100px) {
 			width: 100%;
-			padding-left: 0 !important;
 			#nav-toggle {
 				margin-left: 10px;
 			}
@@ -846,7 +845,7 @@ nav {
 		.custom-nav {
 			cursor: pointer;
 			position: absolute;
-			z-index: 10;
+			z-index: 8;
 			height: 46px;
 			top: 50%;
 			margin-top: -23px;
